tests/paczka1/small_fuzzy/66208123.err
Error in line 2: dQbKoZpEXb S90 43,0
Error in line 3: A44 S558 53,8
